--- a/proj1/makefile
+++ b/proj1/makefile
@@ -2,5 +2,12 @@ decrypt: decrypt.o
 	gcc -Wall decrypt.o -o decrypt 
 decrypt.o: decrypt.c
 
+test:test1 test2
+test1:
+	./cipher 1 5 data.txt data.out
+test2:
+	./cipher 2 5 data.out data.bak
 
-
+check:check1
+check1:
+	diff test_page fname.bak
