Final working version 1.2 of proj1

--- a/proj1/makefile
+++ b/proj1/makefile
@@ -5,6 +5,10 @@ decrypt.o: decrypt.c
 test:test1 test2
 test1:
 	./cipher 1 5 data.txt data.out
+	./decrypt data.out data.bak
+	diff data.txt data.bak
 test2:
-	./cipher 2 5 data.out data.bak
+	./cipher 1 5 test_page test_page.out 
+	./decrypt test_page.out test_page.bak
+	diff test_page test_page.bak
 
